Continue amending streaming and add iterators for line/rect

--- a/src/css/master.module.css
+++ b/src/css/master.module.css
@@ -1,8 +1,9 @@
 .card {
-    background-color: white    
+    background-color: lightblue    
 }
+
 .selectedCard {
-    background-color: lightgray
+    background-color: green
 }
 
 .stageParentDiv {
