Add saturated pixel settings

--- a/src/css/Button.module.css
+++ b/src/css/Button.module.css
@@ -1,7 +1,3 @@
 .button {
-    background-color: orange;
-
-    &[data-collapsed] {
-        background-color: red;
-    }
+    background-color: green;
 }
