--- a/src/css/Button.module.css
+++ b/src/css/Button.module.css
@@ -1,3 +1,10 @@
-.button {
-    background-color: green;
+.root {
+    background-color: dodgerblue;
+    height: 100%;
+    width: 100%;
+    font-size: 10;
+}
+
+.label {
+    font-size: larger;
 }
